<resources>
    <string name="app_name">clickComida</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="mi_carro">Mi carro de compras</string>
    <string name="clave_boton">He olvidado mi contraseña</string>
    <string name="tu_nombre">¿Cual es tu nombre?</string>
    <string name="tu_apellido">¿Cual es tu apellido?</string>
    <string name="registrar_usuario">Registrate</string>
    <string name="texto_correo">Correo Electronico</string>
    <string name="texto_clave">Contraseña</string>
    <string name="texto_clave_repetir">Repetir Contraseña</string>
    <string name="texto_restaurar_clave">Restaurar Clave</string>
    <string name="IniciarSesionCorreo_texto">Inicia sesión con tu correo electronico</string>
    <string name="RestaurarClave">Restaurar contraseña</string>
    <string name="mensaje_welcome">Bienvenido</string>
    <string name="tambien_puedes">Tambien puedes...</string>
    <string name="title_activity_inicio_usuario">InicioUsuario</string>
    <string name="estamos_casi_listo">Estamos casi listos</string>
    <string name="pasaje">Pasaje</string>
    <string name="numero">Numero</string>
    <string name="usuario_nickname">Nickname</string>
    <string name="telefono_celular">Telefono/Celular</string>
    <string name="telefono_celular_opcional">Telefono/Celular (Opcional)</string>
    <string name="continuar">Continuar</string>
    <string name="registrar">Registrar</string>
    <string name="direccion_ip">192.168.43.71</string>
    <string name="Editar">Editar Usuario</string>
    <string name="agregar_foto">Agregar Fotos (Puedes deslizar a la derecha. Minimo 4)</string>
    <string name="foto_tienda_general">Imagen de la tienda</string>
    <string name="check_reparto">Esta tienda hace reparto a domicilio</string>
    <string name="ubicacion_tienda">\nTu ubicación</string>
    <string name="calle_tienda">Calle</string>
    <string name="numero_tienda">Numero</string>
    <string name="horario_tienda">\nHorario de la tienda</string>
    <string name="horario_continuado">Continuado</string>
    <string name="horario_m_t">Mañana y tarde</string>
    <string name="nombre_tienda">Nombre de la tienda</string>
    <string name="a">a</string>
    <string name="horario_de">Pincha aqui para fijar hora comienzo</string>
    <string name="horario_hasta">Pincha Aqui para fijar hora fin</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="horario_titulo">\nHorario de atención</string>
    <string name="horario_descripcion">¿Tu tienda trabaja en horario continuado o mañana y tarde?</string>
    <string name="tomorrow">Mañana</string>
    <string name="tarde">Tarde</string>
    <string name="titulo_productos_crear">Productos que vas a vender</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="des_producto">Descripción</string>
    <string name="precio_venta">Precio</string>
    <string name="agregar_producto">Agregar</string>
    <string name="modificar_producto">Modificar</string>
    <string name="eliminar_producto">Eliminar</string>
    <string name="titulo_gestionar_producto">Gestiona tus productos</string>
    <string name="categoria_producto">Categoria</string>
    <string name="facebook_app_id">1583720611646445</string>
    <string name="mis_datos">Mis datos personales</string>
    <string name="usuario_nombre">Nombre:</string>
    <string name="usuario_apellido">Apellido:</string>
    <string name="usuario_nick">Nickname:</string>
    <string name="correo_usuario">Correo electronico:</string>
    <string name="tipo_usuario">Tipo de cuenta:</string>
    <string name="numero_de_telefono_de_usuario">Numeros telefonicos</string>
    <string name="direcciones_usuario">usuario_direccion</string>
    <string name="numtel_uno">Telefono 1:</string>
    <string name="numtel_dos">Telefono 2:</string>
    <string name="direccion_usuario">Direccion</string>
    <string name="calle_usuario">Calle:</string>
    <string name="calle_numero_usuario">Numero:</string>
    <string name="titulo_inicio">Inicio</string>
    <string name="titulo_crear_tienda">Crear tienda virtual</string>
    <string name="titulo_mis_datos">Mis datos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_maps_key">AIzaSyDk4MD2mWUgYH5ESkKYZDaxNz61fPgw4fo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_inicio__usuario">Inicio_Usuario</string>
    <string name="title_activity_mapa_inicio">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="eligeOpcion">Elige una opcion</string>
    <string name="quiero_spinner">Quiero...</string>
    <string name="el_los_spinner">El/Los...</string>
    <string name="modificar_elemento_usuario">Modificar</string>
    <string name="tu_nombre_actual">Tu nombre actual</string>
    <string name="direccion_web">http://clickcomida.esy.es/</string>
    <string name="tu_nombre_nuevo">Nuevo nombre</string>
    <string name="tu_apellido_nuevo">Nuevo apellido</string>
    <string name="tu_nickname_nuevo">Nuevo nickname:</string>
    <string name="tu_correo_nuevo">Nuevo correo electronico</string>
    <string name="tu_clave_nuevo">Nueva clave</string>
    <string name="tu_clave_nuevo_rep">Repite tu nueva clave</string>
    <string name="debes_estar_conectado">Debes estar conectado a una red.</string>
    <string name="ingrese_clave_actual">Ingrese clave actual</string>
    <string name="modificar_boton">Modificar</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="titulo_modificar_clave">Modificar clave</string>
    <string name="clave_nueva_usuario">Clave nueva</string>
    <string name="clave_nueva_rep">Repite clave nueva</string>
    <string name="titulo_agregar_direccion">Agregar nueva direccion</string>
    <string name="titulo_calle_usuario">Calle</string>
    <string name="titulo_calle_numero_usuario">Numero</string>
    <string name="titulo_agregar_telefono">Agregar nuevo telefono</string>
    <string name="titulo_nuevo_telefono">Nuevo telefono</string>
    <string name="Eliminar" />
    <string name="titulo_eliminar">Eliminar</string>
    <string name="descripcion_telefono_o_direccion">Seleccione un telefono en esta lista y elimine</string>
    <string name="descripcion_direccion">Seleccione una direccion en esta lista y elimine</string>
    <string name="titulo_inicio_sesion">Iniciando sesión...</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="direccion_1">Direccion 1</string>
    <string name="direccion_2">Direccion 2</string>
    <string name="direccion_3">Direccion 3</string>
    <string name="titulo_modificar_direccion">Selecciona una dirección en la lista para modificarlo</string>
    <string name="titulo_has_seleccionado">Has seleccionado</string>
    <string name="titulo_ingresar_nueva_calle_numero">Ingresa nueva calle y numero para reemplazar</string>
    <string name="nueva_calle">Nueva calle</string>
    <string name="nuevo_numero">Nuevo numero</string>
    <string name="boton_cerrar">Cerrar</string>
    <string name="titulo_modificar_telefono">Selecciona un telefono en la lista para modificar</string>
    <string name="titulo_nuevo_numero">Nuevo numero</string>
    <string name="Crear_tienda_virtual">Crear tienda virtual</string>
    <string name="titulo_agregar_imagen">Imagen principal</string>
    <string name="titulo_agregar_mas_fotos">Agrega fotos del interior de tu tienda, minimo 4 fotos</string>
    <string name="titulo_registrar">REGISTRATE</string>
    <string name="titulo_volver">VOLVER</string>
    <string name="titulo_bienvvenido">BIENVENIDO A CLICK COMIDA</string>
    <string name="titulo_horario_atencion">Horario de atención</string>
    <string name="titulo_describe_tu_producto">DESCRIBE TU PRODUCTO QUE VAS A VENDER</string>
    <string name="titulo_borrar_descripcion">BORRAR</string>
    <string name="titulo_descripcion">Descripción</string>
    <string name="titulo_guardar">GUARDAR</string>
    <string name="titulo_modificar">MODIFICAR</string>
    <string name="des_tiend">Cuentanos de que se trata tu tienda...</string>
    <string name="titulo_dias">¿Que digas atenderas?</string>
    <string name="titulo_dias_tienda">Dinos tu dia de inicio y fin</string>
    <string name="inicio">Inicio</string>
    <string name="fin">Fin</string>
    <string name="titulo_mapa_indicanos">Indicar mi posición en el mapa</string>
    <string name="title_activity_maps_registro">Map</string>
    <string name="title_activity_maps_reg">Map</string>
    <string name="titulo_fijar_posicion">Esta es mi posición</string>
    <string name="titulo_cordenadas">Estan son tus coordenadas en el mapa</string>
    <string name="titulo_latitud">Latitud</string>
    <string name="titulo_longitud">Longitud</string>
    <string name="titulo_mapa">Cambiar las coordenadas de mi ubicacion</string>
    <string name="titulo_requisitos_postulantes">Requisitos para los postulantes</string>
    <string name="titulo_postulantes">Agrega una breve descripción acerca de los requisitos para los postulantes</string>
    <string name="titulo_numero_postulante">Numero de postulantes</string>
    <string name="titulo_nuevo_nombre">Nuevo nombre</string>
    <string name="titulo_aviso_tienda">Ya existe una tienda con el nombre</string>
    <string name="titulo_nombre_tienda">Nombre tienda</string>
    <string name="titulo_mi_tienda">Mi tienda</string>
    <string name="titulo_tienda_seleccionada">Tienda</string>
    <string name="titulo_detalles">Detalles de la tienda</string>
    <string name="titulo_modificar_detalles">Modificar detalles</string>
    <string name="titulo_horario_atencion_selected">Horario de atención</string>
    <string name="titulo_necesita_repartidores">Esta tienda necesita repartidores</string>
    <string name="title_activity_maps_tienda">Map</string>
    <string name="title_activity_maps_prueba">Map</string>
    <string name="titulo_seleccion_opcion">Selecciona una opción</string>
    <string name="titulo_productos">Productos</string>
    <string name="titulo_mod_tienda">Modificar datos</string>
    <string name="titulo_mis_productos">Productos de mi tienda</string>
    <string name="titulo_agregar_coordendas">Indicar mi posicion en el mapa</string>
    <string name="titulo_favorito">Agregar a mis favoritos</string>
    <string name="titulo_comentarios">Comentarios de los usuarios que han comprado en la tienda</string>
    <string name="titulo_comentar">Comentar</string>
    <string name="titulo_buscar">Buscar</string>
    <string name="titulo_nombre">Nombre</string>
    <string name="titulo_apellido">Apellido</string>
    <string name="titulo_nombre_apellido">Nombre y apellido</string>
    <string name="titulo_cambiar_clave">Cambiar clave</string>
    <string name="titulo_favoritos">Favoritos</string>
    <string name="titulo_tienda">Tiendas</string>
    <string name="titulo_producto">Productos</string>
</resources>