<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/titulo_modificar_direccion"
            android:textColor="@color/colorNegro"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvListaDirecciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@color/celesteClaro"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCalle_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="211dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo_has_seleccionado"
            android:textColor="@color/colorNegro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvInfoCalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/calle_usuario"
            android:textColor="@color/colorNegro" />

        <TextView
            android:id="@+id/tvInfoNumeroCalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/calle_numero_usuario"
            android:textColor="@color/colorNegro" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCalle_numero_textos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo_ingresar_nueva_calle_numero"
            android:textColor="@color/colorNegro"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/eNuevaCalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nueva_calle" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/eNuevoNumeroCalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nuevo_numero" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="398dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnModificarDireccion_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modificar_boton" />

        <Button
            android:id="@+id/btnCerrarDireccion_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boton_cerrar" />
    </LinearLayout>
</RelativeLayout>